feat(transactions): add transactions entities and persisted events